# POE2-Research

./: .gitignore  README.md  pyproject.toml  run_alpha.py  start_alpha.bat
data/: source_registry.json
data/knowledge/: ascendancies.json
data/sample/: builds.json  character.json  prices.json
docs/: alpha-usage.zh.md  character-optimizer.zh.md  data-contract.zh.md  deep-development-roadmap.zh.md  research-protocol.zh.md  source-landscape.zh.md
src/poe2_build_lab/: __init__.py  character.py  cli.py  data_loader.py  market.py  models.py  recommender.py  scoring.py  web.py
src/poe2_build_lab/sources/: __init__.py  local_json.py  official_api.py  poe2db.py  trade_site.py
tests/: test_character.py  test_recommender.py  test_web_api.py
web/: index.html
web/static/: app.js  styles.css
